# Guesser

./: CMakeLists.txt  README.md
Debug/: makefile
Debug/src/: subdir.mk
src/: guesser.c  guesser.c
